--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "devDependencies": {
         "grunt": "0.4.x",
         "grunt-contrib-jshint": "0.10.x",
+        "grunt-contrib-watch": "0.6.x",
         "grunt-karma": "~0.8.2",
         "karma": "~0.12.0",
         "karma-coverage": "0.2.x",
         "karma-coveralls": "0.1.x",
         "karma-jasmine": "~0.2.0",
-        "karma-phantomjs-launcher": "0.1.x"
+        "karma-phantomjs-launcher": "0.1.x",
+        "karma-spec-reporter": "0.0.13"
     },
     "license": "MIT",
     "name": "file-input",
