--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "karma": "~0.12.0",
         "karma-coverage": "0.2.x",
         "karma-coveralls": "0.1.x",
+        "karma-firefox-launcher": "~0.1.2",
         "karma-jasmine": "~0.2.0",
         "karma-phantomjs-launcher": "0.1.x",
         "karma-spec-reporter": "0.0.13"
