feat(camera): easy camera access for iOS Also upgraded to Polymer 0.4.2 closes #9

--- a/.jshintrc
+++ b/.jshintrc
@@ -50,6 +50,7 @@
         "describe",
         "document",
         "expect",
+        "navigator",
         "FrameGrab",
         "it",
         "RSVP",
