test(validation): validation tests
Also update the docs.

closes #19

--- a/.jshintrc
+++ b/.jshintrc
@@ -50,6 +50,7 @@
         "describe",
         "document",
         "expect",
+        "jasmine",
         "navigator",
         "FrameGrab",
         "it",
