--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,10 @@
 {
   "name": "file-input",
-  "version": "1.1.4",
+  "version": "2.0.0",
   "authors": [
     "Ray Nicholus"
   ],
-  "description": "polymer element for styling, normalizing, and generally fixing <input type=\"file\">",
+  "description": "web component for styling, normalizing, and generally fixing <input type=\"file\">",
   "main": "element/*",
   "license": "MIT",
   "ignore": [
