--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "karma-firefox-launcher": "~0.1.2",
         "karma-jasmine": "~0.2.0",
         "karma-phantomjs-launcher": "0.1.x",
-        "karma-spec-reporter": "0.0.13"
+        "karma-spec-reporter": "0.0.13",
+        "webcomponents.js": "0.7.2"
     },
     "license": "MIT",
     "name": "file-input",
