--- a/components/file-input/package.json
+++ b/components/file-input/package.json
@@ -3,7 +3,7 @@
         "name": "Ray Nicholus"
     },
     "bugs": "https://github.com/garstasio/file-input/issues",
-    "description": "polymer element for styling, normalizing, and generally fixing <input type=\"file\">",
+    "description": "web component for styling, normalizing, and generally fixing <input type=\"file\">",
     "devDependencies": {
         "grunt": "0.4.x",
         "grunt-contrib-jshint": "0.10.x",
@@ -13,8 +13,8 @@
         "karma-coveralls": "0.1.x",
         "karma-firefox-launcher": "~0.1.2",
         "karma-jasmine": "~0.2.0",
-        "karma-phantomjs-launcher": "0.1.x",
-        "karma-spec-reporter": "0.0.13"
+        "karma-spec-reporter": "0.0.13",
+        "webcomponents.js": "0.7.2"
     },
     "license": "MIT",
     "name": "file-input",
@@ -22,5 +22,5 @@
         "type" : "git",
         "url" : "https://github.com/garstasio/file-input.git"
     },
-    "version": "1.1.4"
+    "version": "2.0.0"
 }
